update LeetCode Weekly Contest 328

--- a/algorithm/LeetCode/[Easy] 1022. Sum of Root To Leaf Binary Numbers.md
+++ b/algorithm/LeetCode/[Easy] 1022. Sum of Root To Leaf Binary Numbers.md
@@ -209,3 +209,35 @@ int sumRootToLeaf(struct TreeNode* root){
     return dfs(root, 0);
 }
 ```
+
+**Solution 6: (DFS)**
+```
+Runtime: 40 ms
+Memory: 14.1 MB
+```
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def sumRootToLeaf(self, root: Optional[TreeNode]) -> int:
+        ans = 0
+        
+        def dfs(node, cur):
+            nonlocal ans
+            cur <<= 1
+            cur += node.val
+            if not node.left and not node.right:
+                ans += cur
+                return
+            if node.left:
+                dfs(node.left, cur)
+            if node.right:
+                dfs(node.right, cur)
+            
+        dfs(root, 0)
+        return ans
+```
