--- a/algorithm/LeetCode/[Hard] 1373. Maximum Sum BST in Binary Tree.md
+++ b/algorithm/LeetCode/[Hard] 1373. Maximum Sum BST in Binary Tree.md
@@ -107,3 +107,39 @@ class Solution:
         traverse(root)
         return res
 ```
+
+**Solution 2: (DFS, postorder)**
+```
+Runtime: 443 ms
+Memory: 64.8 MB
+```
+```python
+# Definition for a binary tree node.
+# class TreeNode:
+#     def __init__(self, val=0, left=None, right=None):
+#         self.val = val
+#         self.left = left
+#         self.right = right
+class Solution:
+    def maxSumBST(self, root: Optional[TreeNode]) -> int:
+        ans = 0
+        
+        def dfs(node):
+            nonlocal ans
+            if not node:
+                return [float('inf'), float('-inf'), 0]
+            left_min, left_max, left_sum = dfs(node.left)
+            right_min, right_max, right_sum = dfs(node.right)
+            if left_max < node.val < right_min:
+                ans = max(ans, left_sum+right_sum+node.val)
+                if left_min == float('inf'):
+                    left_min = node.val
+                if right_max == float('-inf'):
+                    right_max = node.val
+                return [left_min, right_max, left_sum+right_sum+node.val]
+            return [float('-inf'), float('inf'), 0]
+            
+        dfs(root)
+            
+        return ans
+```
