--- a/algorithm/LeetCode/[Hard] 2246. Longest Path With Different Adjacent Characters.md
+++ b/algorithm/LeetCode/[Hard] 2246. Longest Path With Different Adjacent Characters.md
@@ -96,3 +96,38 @@ public:
     }
 };
 ```
+
+**Solution 3: (DFS)**
+```
+Runtime: 1863 ms
+Memory: 152.9 MB
+```
+```python
+class Solution:
+    def longestPath(self, parent: List[int], s: str) -> int:
+        ans = 0
+        child = collections.defaultdict(list)
+        for i, p in enumerate(parent):
+            child[p] += [i]
+
+        def dfs(v, p):
+            nonlocal ans
+            rst = 0
+            mx1 = mx2 = 0
+            for nv in child[v]:
+                cur = dfs(nv, v)
+                if cur > mx1:
+                    mx2 = max(mx2, mx1)
+                    mx1 = cur
+                elif cur > mx2:
+                    mx2 = cur
+            rst = mx1+mx2+1
+            ans = max(ans, rst)
+            rst = mx1+1
+            if s[v] == s[p]:
+                rst = 0
+            return rst
+
+        dfs(0, -1)
+        return ans
+```
