--- a/algorithm/LeetCode/[Hard] 2421. Number of Good Paths.md
+++ b/algorithm/LeetCode/[Hard] 2421. Number of Good Paths.md
@@ -83,7 +83,7 @@ can pair up with the nodes of value `v` on the other side.
 We union one node into the other by union action,
 and also the count of nodes with value `v`.
 
-We reapeatly doing union action for all edges until we build up the whole tree.
+We repeatly doing union action for all edges until we build up the whole tree.
 
 
 **Complexity**
