--- a/algorithm/LeetCode/[Easy] 1071. Greatest Common Divisor of Strings.md
+++ b/algorithm/LeetCode/[Easy] 1071. Greatest Common Divisor of Strings.md
@@ -45,3 +45,43 @@ class Solution:
         if str1[:len(str2)] == str2: return self.gcdOfStrings(str1[len(str2):], str2)  # x - y (also need to check the prefix str match)
         return "" # original gcd alway has a solution (at least '1')
 ```
+
+**Solution 2: (Brute Force)**
+```
+Runtime: 24 ms
+Memory: 13.8 MB
+```
+```python
+class Solution:
+    def gcdOfStrings(self, str1: str, str2: str) -> str:
+        len1, len2 = len(str1), len(str2)
+        
+        def valid(k):
+            if len1 % k or len2 % k: 
+                return False
+            n1, n2 = len1 // k, len2 // k
+            base = str1[:k]
+            return str1 == n1 * base and str2 == n2 * base 
+        
+        for i in range(min(len1, len2), 0, -1):
+            if valid(i):
+                return str1[:i]
+        return ""
+```
+
+**Solution 3: (Greatest Common Divisor)**
+```
+Runtime: 37 ms
+Memory: 13.9 MB
+```
+```python
+class Solution:
+    def gcdOfStrings(self, str1: str, str2: str) -> str:
+        # Check if they have non-zero GCD string.
+        if str1 + str2 != str2 + str1:
+            return ""
+
+        # Get the GCD of the two lengths.
+        max_length = gcd(len(str1), len(str2))
+        return str1[:max_length]
+```
