update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 2573. Find the String with LCP.md
+++ b/algorithm/LeetCode/[Hard] 2573. Find the String with LCP.md
@@ -40,6 +40,10 @@ Explanation: lcp[3][3] cannot be equal to 3 since word[3,...,3] consists of only
 ---
 **Solution 1: (Check Same Characters)**
 
+__Intuition__
+If lcp[i][j] > 0, then A[i] = A[j]
+If lcp[i][j] == 0, then A[i] != A[j]
+
 __Explanation__
 We follow the intution above,
 find the same A[i] and assign them to the same character c.
