update LeetCode Weekly Contest 334

--- a/algorithm/LeetCode/[Hard] 1675. Minimize Deviation in Array.md
+++ b/algorithm/LeetCode/[Hard] 1675. Minimize Deviation in Array.md
@@ -131,7 +131,7 @@ public:
 Runtime: 200 ms
 Memory Usage: 67.2 MB
 ```
-```
+```c++
 class Solution {
 public:
     int minimumDeviation(vector<int>& nums) {
@@ -170,6 +170,40 @@ public:
         // we are returning mx - mn
         
         return min_deviation;
+    }
+};
+```
+
+**Solution 4: (Greedy, Heap)**
+```
+Runtime: 564 ms
+Memory: 53.4 MB
+```
+```c++
+class Solution {
+public:
+    int minimumDeviation(vector<int>& nums) {
+        int n = nums.size();
+        int mx = INT_MIN, mn = INT_MAX, cur, ans;
+        for (int &num: nums) {
+            if (num%2) {
+                num *= 2;
+            }
+            mx = max(mx, num);
+            mn = min(mn, num);
+        }
+        ans = mx - mn;
+        priority_queue<int> pq(nums.begin(), nums.end());
+        while (pq.top()%2 == 0) {
+            cur = pq.top();
+            pq.pop();
+            ans = min(ans, cur-mn);
+            cur /= 2;
+            mn = min(mn, cur);
+            pq.push(cur);
+        }
+        ans = min(ans, pq.top()-mn);
+        return ans;
     }
 };
 ```
