--- a/algorithm/LeetCode/[Hard] 1345. Jump Game IV.md
+++ b/algorithm/LeetCode/[Hard] 1345. Jump Game IV.md
@@ -211,45 +211,53 @@ class Solution:
 
 **Solution 4: (BFS)**
 ```
-Runtime: 272 ms
-Memory Usage: 67.7 MB
+Runtime: 191 ms
+Memory: 70.5 MB
 ```
 ```c++
 class Solution {
 public:
     int minJumps(vector<int>& arr) {
-        int n = arr.size();
-        if(n == 1) return 0;
-        unordered_map<int,vector<int>> mp;
-        for(int i=0; i<arr.size(); i++){
+        int N = arr.size(), i, sz, pos, ans = 0;
+        if (N == 1) {
+            return 0;
+        }
+        unordered_map<int, vector<int>> mp;
+        for (i = 0; i < N; i ++) {
             mp[arr[i]].push_back(i);
         }
         queue<int> q;
-        int steps = 0;
         q.push(0);
-        while(!q.empty()){
-            steps++;
-            int size = q.size();
-            while(size--){
-                int a = q.front();
+        while (!q.empty()) {
+            ans += 1;
+            sz = q.size();
+            while (sz) {
+                pos = q.front();
                 q.pop();
-                if(a-1 >= 0 && mp.find(arr[a-1])!=mp.end()) q.push(a-1);
-                if(a+1 < n && mp.find(arr[a+1])!=mp.end()){
-                    if(a+1 == n-1) return steps;
-                    q.push(a+1);
+                if (pos - 1 >= 0 && mp.count(arr[pos - 1])) {
+                    q.push(pos - 1);
                 }
-                if(mp.find(arr[a])!=mp.end()){
-                    for(auto k : mp[arr[a]])
-                        if(k!=a){
-                            if(k == n-1) return steps;
-                            q.push(k);
+                if (pos + 1 < N && mp.count(arr[pos + 1])) {
+                    if (pos + 1 == N-1) {
+                        return ans;
+                    }
+                    q.push(pos + 1);
+                }
+                if (mp.count(arr[pos])) {
+                    for (int npos: mp[arr[pos]]) {
+                        if (npos != pos) {
+                            if (npos == N-1) {
+                                return ans;
+                            }
+                            q.push(npos);
                         }
-                            
+                    }
                 }
-                mp.erase(arr[a]);
+                mp.erase(arr[pos]);
+                sz -= 1;
             }
         }
-        return steps;
+        return -1;
     }
 };
 ```
