update LeetCode Weekly Contest 336

--- a/algorithm/LeetCode/[Easy] 1539. Kth Missing Positive Number.md
+++ b/algorithm/LeetCode/[Easy] 1539. Kth Missing Positive Number.md
@@ -106,3 +106,76 @@ class Solution:
             k = nk
         return arr[-1]+k
 ```
+
+**Solution 4: (Greedy)**
+```
+Runtime: 4 ms
+Memory: 9.7 MB
+```
+```c++
+class Solution {
+public:
+    int findKthPositive(vector<int>& arr, int k) {
+        int pre = 0, i = 0, gap;
+        while (i < arr.size()) {
+            gap = arr[i] - pre - 1;
+            if (k <= gap) {
+                break;
+            } else {
+                k -= gap;
+            }
+            pre = arr[i];
+            i += 1;
+        }
+        return pre + k;
+    }
+};
+```
+
+**Solution 5: (Greedy)**
+```
+Runtime: 3 ms
+Memory: 9.6 MB
+```
+```c++
+class Solution {
+public:
+    int findKthPositive(vector<int>& arr, int k) {
+        for (int n = 1, i = 0; n <= 1000; ++n) {
+            if (i < arr.size() && arr[i] == n)
+                ++i;
+            else if (--k == 0)
+                return n;
+        }
+        return 1000 + k;
+    }
+};
+```
+
+**Solution 6: (Binary Search)**
+```
+Runtime: 5 ms
+Memory: 9.6 MB
+```
+```c++
+class Solution {
+public:
+    int findKthPositive(vector<int>& arr, int k) {
+        if(arr.empty() || arr[0] > k)
+            return k;
+        int n = arr.size();
+        if(arr[n-1] < n+k)
+            return n+k;
+        int l = 0, r = n-1;
+        while(l < r)
+        {
+            int m = (l+r)/2;
+            if((arr[m]-(m+1)) < k)
+                l = m+1;
+            else
+                r = m;
+        }
+        return k+l;
+    }
+};
+```
