update LeetCode Weekly Contest 338

--- a/algorithm/LeetCode/[Hard] 2360. Longest Cycle in a Graph.md
+++ b/algorithm/LeetCode/[Hard] 2360. Longest Cycle in a Graph.md
@@ -95,3 +95,36 @@ public:
     }
 };
 ```
+
+**Solution 3: (DFS)**
+```
+Runtime: 213 ms
+Memory: 121.7 MB
+```
+```c++
+class Solution {
+    void dfs(int i, int dist, int src, int &rst, vector<pair<int, int>> &memo, vector<int> &edges) {
+        auto &[dist_i, from_i] = memo[i];
+        if (dist_i == -1) {
+            memo[i] = {dist, src};
+            dist += 1;
+            if (edges[i] != -1) {
+                dfs(edges[i], dist, src, rst, memo, edges);
+            }
+        } else {
+            if (from_i == src) {
+                rst = max(rst, dist-dist_i);
+            }
+        }
+    }
+public:
+    int longestCycle(vector<int>& edges) {
+        int n = edges.size(), ans = -1;
+        vector<pair<int, int>> memo(n, {-1, -1});
+        for (int i = 0; i < n; i ++) {
+            dfs(i, 0, i, ans, memo, edges);
+        }
+        return ans;
+    }
+};
+```
