update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 1402. Reducing Dishes.md
+++ b/algorithm/LeetCode/[Hard] 1402. Reducing Dishes.md
@@ -151,3 +151,59 @@ class Solution:
 
         return dp(0, 1)
 ```
+
+**Solution 4: (Sort, Greedy, forward)**
+```
+Runtime: 4 ms
+Memory: 8.3 MB
+```
+```c++
+class Solution {
+public:
+    int maxSatisfaction(vector<int>& satisfaction) {
+        sort(satisfaction.begin(), satisfaction.end());
+        if (satisfaction.back() < 0) {
+            return 0;
+        }
+        int N = satisfaction.size(), ans = 0, i, diff;
+        vector<int> pre(N+1);
+        for (i = 0; i < N; i++) {
+            ans += (i+1)*satisfaction[i];
+            pre[i+1] = satisfaction[i] + pre[i];
+        }
+        i = 0;
+        while (1 < N) {
+            diff = -satisfaction[i] - (pre.back() - pre[i+1]);
+            if (diff > 0) {
+                ans += diff;
+            } else {
+                break;
+            }
+            i += 1;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 5: (Sort, Greedy, backward)**
+```
+Runtime: 3 ms
+Memory: 8.1 MB
+```
+```c++
+class Solution {
+public:
+    int maxSatisfaction(vector<int>& satisfaction) {
+        sort(satisfaction.begin(), satisfaction.end());
+        int N = satisfaction.size(), cur = 0, ans = 0;
+        while (satisfaction.size() != 0 && cur+satisfaction.back() > 0) {
+            cur += satisfaction.back();
+            satisfaction.pop_back();
+            ans += cur;
+        }
+        
+        return ans;
+    }
+};
+```
