--- a/algorithm/LeetCode/[Hard] 1444. Number of Ways of Cutting a Pizza.md
+++ b/algorithm/LeetCode/[Hard] 1444. Number of Ways of Cutting a Pizza.md
@@ -39,7 +39,7 @@ Output: 1
 
 # Submissions
 ---
-**Solution 1: (DP Top-Down, Postfix Sum)**
+**Solution 1: (DP Top-Down, Postfix Sum, backward)**
 ```
 Runtime: 236 ms
 Memory Usage: 15.5 MB
@@ -69,4 +69,85 @@ class Solution:
             return ans
 
         return dp(k - 1, 0, 0)
+```
+
+**Solution 2: (DP Top-Down, Postfix Sum, backward)**
+```
+Runtime: 21 ms
+Memory: 8.1 MB
+```
+```c++
+class Solution {
+    int dfs(int r, int c, int k, int m, int n, vector<vector<vector<int>>>& dp, vector<vector<int>>& preSum) {
+        if (preSum[r][c] == 0) return 0; 
+        if (k == 0) return 1; 
+        if (dp[k][r][c] != -1) return dp[k][r][c];
+        int rst = 0;
+        for (int nr = r + 1; nr < m; nr++) 
+            if (preSum[r][c] - preSum[nr][c] > 0)
+                rst = (rst + dfs(nr, c, k - 1, m, n, dp, preSum)) % 1000000007;
+        for (int nc = c + 1; nc < n; nc++) 
+            if (preSum[r][c] - preSum[r][nc] > 0)
+                rst = (rst + dfs(r, nc, k - 1, m, n, dp, preSum)) % 1000000007;
+
+        dp[k][r][c] = rst;
+        return dp[k][r][c];
+    }
+public:
+    int ways(vector<string>& pizza, int k) {
+        int m = pizza.size(), n = pizza[0].size();
+        vector<vector<vector<int>>> dp(vector(k, vector(m, vector(n, -1))));
+        vector<vector<int>> preSum(vector(m+1, vector(n+1, 0)));
+        for (int r = m - 1; r >= 0; r--)
+            for (int c = n - 1; c >= 0; c--)
+                preSum[r][c] = preSum[r][c+1] + preSum[r+1][c] - preSum[r+1][c+1] + (pizza[r][c] == 'A');
+        
+        return dfs(0, 0, k-1, m, n, dp, preSum);
+    }
+};
+```
+
+**Solution 3: (DP Bottom-Up, Prefix Sum, forward)**
+```
+Runtime: 11 ms
+Memory: 7.6 MB
+```
+```c++
+class Solution {
+public:
+    int ways(vector<string>& pizza, int k) {
+        const int mod = 1000000000 + 7;
+        int rows = pizza.size();
+        int cols = pizza[0].size();
+        int dp[55][55][11] = {};
+        int pre[55][55] = {};
+        for (int i = 1; i <= rows; i++) {
+            for (int j= 1; j <= cols; j++) {
+                pre[i][j] = pre[i-1][j] + pre[i][j-1] - pre[i-1][j-1] + (pizza[rows-i][cols-j] == 'A' ? 1 : 0);
+            }
+        }
+        for (int i = 0; i <= rows; i++) {
+            dp[i][0][0] = 1;
+        }
+        for (int i = 0; i <= rows; i++) {
+            for (int j = 0; j <= cols; j++) {
+                for (int p = 0; p < k; p++) {
+                    if (dp[i][j][p]) {
+                        for (int ni = i+1; ni <= rows; ni++) {
+                            if (pre[ni][j] - pre[i][j] > 0) {
+                                dp[ni][j][p+1] = (dp[ni][j][p+1] + dp[i][j][p]) % mod;
+                            }
+                        }
+                        for (int nj = j+1; nj <= cols; nj++) {
+                            if (pre[i][nj] - pre[i][j] > 0) {
+                                dp[i][nj][p+1] = (dp[i][nj][p+1] + dp[i][j][p]) % mod;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        return dp[rows][cols][k];
+    }
+};
 ```
