update LeetCode Weekly Contest 342

--- a/algorithm/LeetCode/[Easy] 1431. Kids With the Greatest Number of Candies.md
+++ b/algorithm/LeetCode/[Easy] 1431. Kids With the Greatest Number of Candies.md
@@ -50,3 +50,22 @@ class Solution:
         M = max(candies)
         return [candy + extraCandies >= M for candy in candies]
 ```
+
+**Solution 2: (Brute Force)**
+```
+Runtime: 0 ms
+Memory: 9 MB
+```
+```c++
+class Solution {
+public:
+    vector<bool> kidsWithCandies(vector<int>& candies, int extraCandies) {
+        int mx = *max_element(candies.begin(), candies.end());
+        vector<bool> ans(candies.size());
+        for (int i = 0; i < candies.size(); i++) {
+            ans[i] = candies[i] + extraCandies >= mx ? true : false;
+        }
+        return ans;
+    }
+};
+```
