--- a/algorithm/LeetCode/[Hard] 1416. Restore The Array.md
+++ b/algorithm/LeetCode/[Hard] 1416. Restore The Array.md
@@ -164,3 +164,32 @@ class Solution:
         
         return dfs(0, {}) % (10 ** 9 + 7) 
 ```
+
+**Solution 6: (DP Boottom-Up)**
+```
+Runtime: 53 ms
+Memory: 11.9 MB
+```
+```c++
+class Solution {
+public:
+    int numberOfArrays(string s, int k) {
+        int n = s.size(), m = to_string(k).size(), MOD =  1e9+7;
+        long long cur;
+        vector<int> dp(n+1);
+        dp[0] = 1;
+        for (int i = 0; i < n; i ++) {
+            cur = 0;
+            for (int sz = 1; sz < min(m+1, n-i+1); sz ++) {
+                cur = cur*10 + s[i+sz-1] - '0';
+                if (cur == 0 || cur > k) {
+                    break;
+                }
+                dp[i+sz] += dp[i];
+                dp[i+sz] %= MOD;
+            }
+        }
+        return dp[n];
+    }
+};
+```
