--- a/algorithm/LeetCode/[Easy] 1768. Merge Strings Alternately.md
+++ b/algorithm/LeetCode/[Easy] 1768. Merge Strings Alternately.md
@@ -53,3 +53,26 @@ class Solution:
     def mergeAlternately(self, word1: str, word2: str) -> str:
         return ''.join(a + b for a, b in zip_longest(word1, word2, fillvalue=''))
 ```
+
+**Solution 2: (String)**
+```
+Runtime: 4 ms
+Memory: 6.5 MB
+```
+```c++
+public:
+    string mergeAlternately(string word1, string word2) {
+        string ans;
+        int i = 0, j = 0;
+        while (i < word1.size() && j < word2.size()) {
+            ans += word1[i];
+            ans += word2[j];
+            i ++;
+            j ++;
+        }
+        ans += word1.substr(i);
+        ans += word2.substr(j);
+        return ans;
+    }
+};
+```
