--- a/algorithm/LeetCode/[Hard] 1312. Minimum Insertion Steps to Make a String Palindrome.md
+++ b/algorithm/LeetCode/[Hard] 1312. Minimum Insertion Steps to Make a String Palindrome.md
@@ -120,3 +120,28 @@ class Solution:
             
         return N - dp(0, N-1)
 ```
+
+**Solution 3: (DP Bottom-Up)**
+```
+Runtime: 43 ms
+Memory: 28.6 MB
+```
+```c++
+class Solution {
+public:
+    int minInsertions(string s) {
+        int n = s.size();
+        vector<vector<int>> dp(n + 1, vector<int>(n + 1, 0));
+        for (int k = 1; k < n; k++) {
+            for (int i = 0; i < n - k; i++) {
+                if (s[i + k] == s[i]) {
+                    dp[i][i + k] = dp[i + 1][i + k - 1];
+                } else {
+                    dp[i][i + k] = min(dp[i + 1][(i+1) + (k-1)], dp[i][i + k - 1]) + 1;
+                }
+            }
+        }
+        return dp[0][n - 1];
+    }
+};
+```
