--- a/algorithm/LeetCode/[Hard] 1579. Remove Max Number of Edges to Keep Graph Fully Traversable.md
+++ b/algorithm/LeetCode/[Hard] 1579. Remove Max Number of Edges to Keep Graph Fully Traversable.md
@@ -137,3 +137,78 @@ class Solution:
 
         return res if e1 == e2 == n - 1 else -1
 ```
+
+**Solution 2: (Union-Find)**
+```
+Runtime: 570 ms
+Memory: 138.9 MB
+```
+```c++
+class DSU {
+public:
+    vector<int> parent, rank;
+    DSU(int n) {
+        parent.resize(n);
+        rank.resize(n, 0);
+        for (int i = 0; i < n; i ++) {
+            parent[i] = i;
+        }
+    }
+    int find(int x) {
+        return parent[x] = parent[x] == x ? x : find(parent[x]);
+    }
+    bool uni(int x, int y) {
+        int xset = find(x), yset = find(y);
+        if (xset == yset) {
+            return false;
+        }
+        if (rank[xset] < rank[yset]) {
+            parent[xset] = parent[yset];
+        } else if (rank[yset] < rank[xset]) {
+            parent[yset] = parent[xset];
+        } else {
+            parent[yset] = xset;
+            rank[xset] += 1;
+        }
+        return true;
+    }
+};
+
+class Solution {
+public:
+    int maxNumEdgesToRemove(int n, vector<vector<int>>& edges) {
+        DSU dsu1(n), dsu2(n);
+        int e1 = 0, e2 = 0, ans = 0;
+        for (int i = 0; i < edges.size(); i ++) {
+            if (edges[i][0] == 3) {
+                if (dsu1.uni(edges[i][1]-1, edges[i][2]-1)) {
+                    e1 += 1;
+                    e2 += 1;
+                } else {
+                    ans += 1;
+                }
+            }
+        }
+        dsu2.parent = dsu1.parent;
+        for (int i = 0; i < edges.size(); i ++) {
+            if (edges[i][0] == 1) {
+                if (dsu1.uni(edges[i][1]-1, edges[i][2]-1)) {
+                    e1 += 1;
+                } else {
+                    ans += 1;
+                }
+            }
+        }
+        for (int i = 0; i < edges.size(); i ++) {
+            if (edges[i][0] == 2) {
+                if (dsu2.uni(edges[i][1]-1, edges[i][2]-1)) {
+                    e2 += 1;
+                } else {
+                    ans += 1;
+                }
+            }
+        }
+        return e1 == e2 && e2 == n-1 ? ans : -1;
+    }
+};
+```
