update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 2215. Find the Difference of Two Arrays.md
+++ b/algorithm/LeetCode/[Easy] 2215. Find the Difference of Two Arrays.md
@@ -63,3 +63,29 @@ public:
     }
 };
 ```
+
+**Solution 3: (Set)**
+```
+Runtime: 55 ms
+Memory: 31.7 MB
+```
+```c++
+public:
+    vector<vector<int>> findDifference(vector<int>& nums1, vector<int>& nums2) {
+        unordered_set<int> set1(nums1.begin(), nums1.end());
+        unordered_set<int> set2(nums2.begin(), nums2.end());
+        vector<int> diff1, diff2;
+        for (auto &num : set1) {
+            if (!set2.count(num)) {
+                diff1.push_back(num);
+            }
+        }
+        for (auto &num : set2) {
+            if (!set1.count(num)) {
+                diff2.push_back(num);
+            }
+        }
+        return {diff1, diff2};
+    }
+};
+```
