update LeetCode Weekly Contest 344

--- a/algorithm/LeetCode/[Hard] 1964. Find the Longest Valid Obstacle Course at Each Position.md
+++ b/algorithm/LeetCode/[Hard] 1964. Find the Longest Valid Obstacle Course at Each Position.md
@@ -74,3 +74,29 @@ class Solution:
                 obstacles[i] = idx + 1
         return obstacles
 ```
+
+**Solution 2: (Greedy, Binary Search)**
+```
+Runtime: 326 ms
+Memory: 117.7 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> longestObstacleCourseAtEachPosition(vector<int>& obstacles) {
+        vector<int> cur;
+        int idx;
+        for (int i = 0; i < obstacles.size(); i ++) {
+            if (cur.size() == 0 || cur.back() <= obstacles[i]) {
+                cur.push_back(obstacles[i]);
+                obstacles[i] = cur.size();
+            } else {
+                idx = upper_bound(cur.begin(), cur.end(), obstacles[i]) - cur.begin();
+                cur[idx] = obstacles[i];
+                obstacles[i] = idx + 1;
+            }
+        }
+        return obstacles;
+    }
+};
+```
