--- a/algorithm/LeetCode/[Hard] 1406. Stone Game III.md
+++ b/algorithm/LeetCode/[Hard] 1406. Stone Game III.md
@@ -96,3 +96,47 @@ class Solution:
         score = dfs(0)  
         return 'Tie' if score == 0 else 'Alice' if score > 0 else 'Bob'
 ```
+
+**Solution 3: (DP Bottom-Up)**
+```
+Runtime: 253 ms
+Memory: 132.2 MB
+```
+```c++
+class Solution {
+public:
+    string stoneGameIII(vector<int>& stoneValue) {
+        int n = stoneValue.size();
+        vector<int> dp(n, -1e9);
+        for (int i = n - 1; i >= 0; --i) {
+            for (int k = 0, take = 0; k < 3 && i + k < n; ++k) {
+                take += stoneValue[i + k];
+                dp[i] = max(dp[i], take - (i + k + 1 < n ? dp[i + k + 1] : 0));
+            }
+        }
+        if (dp[0] > 0) return "Alice";
+        if (dp[0] < 0) return "Bob";
+        return "Tie";
+    }
+};
+```
+
+**Solution 4: (DP Bottom-Up, O(1) space)**
+```
+Runtime: 248 ms
+Memory: 126.3 MB
+```
+```c++
+class Solution {
+public:
+    string stoneGameIII(vector<int>& stoneValue) {
+        vector<int> dp(4);
+        for (int i = stoneValue.size() - 1; i >= 0; --i) {
+            dp[i % 4] = -1e9;
+            for (int k = 0, take = 0; k < 3 && i + k < stoneValue.size(); ++k)
+                dp[i % 4] = max(dp[i % 4], (take += stoneValue[i + k]) - dp[(i + k + 1) % 4]);
+        }
+        return dp[0] == 0 ? "Tie" : (dp[0] > 0 ? "Alice" : "Bob");
+    }
+};
+```
