update LeetCode Weekly Contest 348

--- a/algorithm/LeetCode/[Easy] 1603. Design Parking System.md
+++ b/algorithm/LeetCode/[Easy] 1603. Design Parking System.md
@@ -51,3 +51,34 @@ class ParkingSystem:
 # obj = ParkingSystem(big, medium, small)
 # param_1 = obj.addCar(carType)
 ```
+
+**Solution 2: (Array)**
+```
+Runtime: 78 ms
+Memory: 32.9 MB
+```
+```c++
+class ParkingSystem {
+    int space[3];
+public:
+    ParkingSystem(int big, int medium, int small) {
+        space[0] = big;
+        space[1] = medium;
+        space[2] = small;
+    }
+    
+    bool addCar(int carType) {
+        if (space[carType-1] == 0) {
+            return false;
+        }
+        space[carType-1] -= 1;
+        return true;
+    }
+};
+
+/**
+ * Your ParkingSystem object will be instantiated and called as such:
+ * ParkingSystem* obj = new ParkingSystem(big, medium, small);
+ * bool param_1 = obj->addCar(carType);
+ */
+```
