update LeetCode Biweekly Contest 106

--- a/algorithm/LeetCode/[Easy] 1351. Count Negative Numbers in a Sorted Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1351. Count Negative Numbers in a Sorted Matrix.md
@@ -59,3 +59,32 @@ class Solution:
         
         return ans
 ```
+
+**Solution 2: (Binary Search)**
+```
+Runtime: 19 ms
+Memory: 10.4 MB
+```
+```c++
+class Solution {
+public:
+    int countNegatives(vector<vector<int>>& grid) {
+        int m = grid.size();
+        int n = grid[0].size();
+        int lo, hi, mid, ans = 0;
+        for (int i = 0; i < m; i++) {
+            lo = 0, hi = n-1;
+            while (lo <= hi) {
+                mid = lo + (hi-lo)/2;
+                if (grid[i][mid] >= 0) {
+                    lo = mid+1;
+                } else {
+                    ans += (hi-mid) + 1;
+                    hi = mid-1;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
