--- a/algorithm/LeetCode/[Easy] 1232. Check If It Is a Straight Line.md
+++ b/algorithm/LeetCode/[Easy] 1232. Check If It Is a Straight Line.md
@@ -49,3 +49,30 @@ class Solution:
         (u, v), (p, q) = coordinates[: 2]
         return all((x - u) * (y - q) == (x - p) * (y - v) for x, y in coordinates)
 ```
+
+**Solution 2: (Math)**
+```
+Runtime: 11 ms
+Memory: 10 MB
+```
+```c++
+class Solution {
+public:
+    bool checkStraightLine(vector<vector<int>>& coordinates) {
+        int x0 = coordinates[0][0];
+        int y0 = coordinates[0][1];
+        int x1 = coordinates[1][0];
+        int y1 = coordinates[1][1];
+        
+        for (int i = 2; i < coordinates.size(); i++) {
+            int x = coordinates[i][0];
+            int y = coordinates[i][1];
+            if ((x - x0) * (y1 - y0) != (y - y0) * (x1 - x0)) {
+                return false;
+            }
+        }
+        
+        return true;
+    }
+};
+```
