update LeetCode Weekly Contest 350

--- a/algorithm/LeetCode/[Hard] 2328. Number of Increasing Paths in a Grid.md
+++ b/algorithm/LeetCode/[Hard] 2328. Number of Increasing Paths in a Grid.md
@@ -58,8 +58,8 @@ class Solution:
 
 **Solution 2: (DP Top-Down)**
 ```
-Runtime: 573 ms
-Memory Usage: 47.8 MB
+Runtime: 330 ms
+Memory: 47.7 MB
 ```
 ```c++
 class Solution {
@@ -67,23 +67,24 @@ class Solution {
     vector<int> dirs={0,1,0,-1,0};
     vector<vector<long>> memo;
     long dp(vector<vector<int>>& grid,int i,int j) {
-        long result=1;  // Contribution of current cell as an increasing sequence.
-        if(memo[i][j]!=-1)  // Return the cached results if they exist.
+        long result = 1;
+        if (memo[i][j] != -1)
             return memo[i][j];
-        for(int d=0;d<4;d++) {  // Check all 4 directions.
-            int x=i+dirs[d],y=j+dirs[d+1];
-            if(x>=0&&y>=0&&x<grid.size()&&y<grid[0].size()&&grid[x][y]>grid[i][j])
-                result=(result+dp(grid,x,y))%MOD;       // Add the total number of cells in the longest path for all directions.
+        int ni, nj;
+        for (int d = 0; d < 4; d ++) {  // Check all 4 directions.
+            ni = i + dirs[d], nj = j + dirs[d+1];
+            if (ni >= 0 && nj >= 0 && ni < grid.size() && nj < grid[0].size() && grid[ni][nj] > grid[i][j])
+                result = (result + dp(grid, ni, nj)) % MOD;
         }
-        return memo[i][j]=result;
+        return memo[i][j] = result;
     }
 public:
     int countPaths(vector<vector<int>>& grid) {
-        long result=0;
-        memo.resize(grid.size(),vector<long>(grid[0].size(),-1));
-        for(int i=0;i<grid.size();i++)      // For each cell as a starting point calculate the number of increasing paths it can contribute.
-            for(int j=0;j<grid[0].size();j++)
-                result=(result+dp(grid,i,j))%MOD;
+        long result = 0;
+        memo.resize(grid.size(), vector<long>(grid[0].size(), -1));
+        for (int i = 0; i < grid.size(); i ++)
+            for (int j = 0; j < grid[0].size(); j ++)
+                result = (result + dp(grid, i, j)) % MOD;
         return result;
     }
 };
