--- a/algorithm/LeetCode/[Hard] 1187. Make Array Strictly Increasing.md
+++ b/algorithm/LeetCode/[Hard] 1187. Make Array Strictly Increasing.md
@@ -91,3 +91,39 @@ class Solution:
             
         return min(dict_pre.keys())
 ```
+
+**Solution 3: (DP Top-Down, binary search, greedy, O(N^2 log(N)))**
+```
+Runtime: 224 ms
+Memory: 26.1 MB
+```
+```c++
+class Solution {
+    int dp[2001][2001];
+    int solve(vector<int>& arr1, vector<int>& arr2, int i, int j, int prev){
+        int m = arr1.size();
+        int n = arr2.size();
+        int res = 2001;
+        if (i >= m)
+            return 0;
+        int k = upper_bound(arr2.begin()+j, arr2.end(), prev)-arr2.begin();  
+        if (dp[i][k] != -1)
+            return dp[i][k];
+        if (k >= n && arr1[i] <= prev)
+            return res;
+        if (k < n) 
+            res = min(res, 1+solve(arr1,arr2, i+1, k+1, arr2[k]));
+        if (prev < arr1[i])
+            res = min(res, solve(arr1,arr2,i+1,k,arr1[i]));
+        return dp[i][k] = res;
+    }
+public:
+    int makeArrayIncreasing(vector<int>& arr1, vector<int>& arr2) {
+        sort(arr2.begin(), arr2.end());
+        memset(dp,-1,sizeof(dp));
+        int ans = solve(arr1,arr2,0,0,INT_MIN);
+        if(ans>2000) return -1;
+        return ans;
+    }
+};
+```
