--- a/algorithm/LeetCode/[Hard] 1575. Count All Possible Routes.md
+++ b/algorithm/LeetCode/[Hard] 1575. Count All Possible Routes.md
@@ -120,3 +120,64 @@ public:
     }
 };
 ```
+
+**Solution 3: (DP Top-Down)**
+```
+Runtime: 252 ms
+Memory: 8.8 MB
+```
+```c++
+class Solution {
+    long dp[101][201] = {}, mod = 1e9+7, finish;
+    int dist(vector<int> &A, int a, int b) {
+        return abs(A[a] - A[b]);
+    }
+    int dfs(vector<int> &A, int start, int fuel) {
+        if (dp[start][fuel]) return dp[start][fuel];
+        long ans = 0;
+        if (start == finish) ans++;
+        for (int i = 0; i < A.size(); ++i) {
+            if (i == start || dist(A, start, i) + dist(A, i, finish) > fuel) continue;
+            ans = (ans + dfs(A, i, fuel - dist(A, i, start))) % mod;
+        }
+        return dp[start][fuel] = ans;
+    }
+public:
+    int countRoutes(vector<int>& locations, int start, int finish, int fuel) {
+        this->finish = finish;
+        return dfs(locations, start, fuel);
+    }
+};
+```
+
+**Solution 3: (DP Bottom-Up)**
+```
+Runtime: 710 ms
+Memory: 11.8 MB
+```
+```c++
+class Solution {
+public:
+    int countRoutes(vector<int>& locations, int start, int finish, int fuel) {
+        const int MOD = 1000000007;
+        int n = locations.size();    
+        
+        vector<vector<int>> dp(n, vector<int>(fuel + 1, 0));
+        for (int f = 0; f <= fuel; f++) {
+            dp[finish][f] = 1;
+        }
+        
+        // for each fuel, we calculate all cross between cities
+        for (int f = 0; f <= fuel; f++) {
+            for (int city = 0; city < n; city++) {            
+                for (int nextCity = 0; nextCity < n; nextCity++) {               
+                    if (nextCity != city && f >= abs(locations[nextCity] - locations[city])) {
+                        dp[city][f] = (dp[city][f] + dp[nextCity][f - abs(locations[nextCity] - locations[city])]) % MOD;
+                    }
+                }
+            }            
+        }
+        return dp[start][fuel];
+    }
+};
+```
