update LeetCode Weekly Contest 352

--- a/algorithm/LeetCode/[Easy] 1732. Find the Highest Altitude.md
+++ b/algorithm/LeetCode/[Easy] 1732. Find the Highest Altitude.md
@@ -38,3 +38,22 @@ class Solution:
     def largestAltitude(self, gain: List[int]) -> int:
         return max([0] + list(accumulate(gain)))
 ```
+
+**Solution 2: (Array)**
+```
+Runtime: 0 ms
+Memory: 7.9 MB
+```
+```c++
+class Solution {
+public:
+    int largestAltitude(vector<int>& gain) {
+        int cur = 0, ans = 0;
+        for (int i = 0; i < gain.size(); i ++) {
+            cur += gain[i];
+            ans = max(ans, cur);
+        }
+        return ans;
+    }
+};
+```
