--- a/algorithm/LeetCode/[Hard] 1601. Maximum Number of Achievable Transfer Requests.md
+++ b/algorithm/LeetCode/[Hard] 1601. Maximum Number of Achievable Transfer Requests.md
@@ -81,3 +81,32 @@ class Solution:
         buildings = [0 for _ in range(n)]
         return dfs(buildings, 0)
 ```
+
+**Solution 2: (Backtrackng)**
+```
+Runtime: 114 ms
+Memory: 8.6 MB
+```
+```c++
+class Solution {
+    void bt(int i, vector<int> &dp, vector<vector<int>> &requests, int cur, int &ans) {
+        if (i == requests.size()) {
+            if (all_of(dp.begin(), dp.end(), [](int v){return v == 0;})) {
+                ans = max(ans, cur);
+            }
+            return;
+        }
+        dp[requests[i][0]] -= 1;
+        dp[requests[i][1]] += 1;
+        bt(i+1, dp, requests, cur+1, ans);
+        dp[requests[i][0]] += 1;
+        dp[requests[i][1]] -= 1;
+        bt(i+1, dp, requests, cur, ans);
+    }
+public:
+    int maximumRequests(int n, vector<vector<int>>& requests) {
+        int ans = 0;
+        vector<int> dp(n);
+        bt(0, dp, requests, 0, ans);
+        return ans;
+```
