--- a/algorithm/LeetCode/[Hard] 1970. Last Day Where You Can Still Cross.md
+++ b/algorithm/LeetCode/[Hard] 1970. Last Day Where You Can Still Cross.md
@@ -94,3 +94,102 @@ class Solution:
                 right = mid - 1  # Try to find a smaller day
         return ans
 ```
+
+**Solution 2: (Binary Search, BFS)**
+```
+Runtime: 802 ms
+Memory: 188.3 MB
+```
+```c++
+class Solution {
+    int DIR[5] = {0, 1, 0, -1, 0};
+    bool canWalk(vector<vector<int>>& cells, int row, int col, int dayAt) {
+        vector<vector<bool>> grid(row, vector<bool>(col, 0)); // Create grid in the `dayAt` th date
+        for (int i = 0; i < dayAt; ++i) grid[cells[i][0]-1][cells[i][1]-1] = 1;
+        queue<pair<int, int>> bfs;
+        for (int c = 0; c < col; ++c) {
+            if (grid[0][c] == 0) { // Add all valid start cells in the top row
+                bfs.push({0, c});
+                grid[0][c] = 1; // Mark as visited
+            }
+        }
+        while (!bfs.empty()) {
+            auto [r, c] = bfs.front(); bfs.pop();
+            if (r == row - 1) return true; // Reach to bottom -> Return Valid
+            for (int i = 0; i < 4; ++i) {
+                int nr = r + DIR[i], nc = c + DIR[i+1];
+                if (nr < 0 || nr == row || nc < 0 || nc == col || grid[nr][nc] == 1) continue;
+                grid[nr][nc] = 1; // Mark as visited
+                bfs.push({nr, nc});
+            }
+        }
+        return false;
+    }
+public:
+    int latestDayToCross(int row, int col, vector<vector<int>>& cells) {
+        int left = 1, right = cells.size(), ans = 0;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (canWalk(cells, row, col, mid)) {
+                ans = mid; // Update current answer so far
+                left = mid + 1; // Try to find a larger day
+            } else right = mid - 1; // Try to find a smaller day
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Union Find)**
+```
+Runtime: 700 ms
+Memory: 115.4 MB
+```
+```c++
+class Solution {
+    map<int, int> arr;
+    int hash(int i, int j) {
+        return i * 30000 + j;
+    }
+    int find(int h) {
+        int f = arr[h];
+        if(f == h) return h;
+        if(f == 0) return arr[h] = h;
+        return arr[h] = find(arr[h]);
+    }
+    bool combine(int a, int b) {
+        a = find(a); b = find(b);
+        if(a != b) {
+            arr[a] = b;
+            return true;
+        }
+        return false;
+    }
+public:
+    int latestDayToCross(int row, int col, vector<vector<int>>& cells) {
+        for(int i = 1; i <= row; i++) {
+            combine(hash(i - 1, 0), hash(i, 0));   //build left border
+            combine(hash(i - 1, col + 1), hash(i, col + 1));  //build right border
+        }
+        int dx[8] = {0, 0, 1, -1, 1, -1, 1, -1};
+        int dy[8] = {1, -1, 0, 0, 1, -1, -1, 1};
+        int k = 0;
+        for(auto &cell : cells) {
+            int x = cell[0], y = cell[1];
+            int h = hash(x, y);
+            find(h);
+            for(int i = 0; i < 8; i++) {
+                int nx = x + dx[i];
+                int ny = y + dy[i];
+                int h1 = hash(nx, ny);
+                if(arr.count(h1)) {
+                    combine(h1, h);
+                }
+            }
+            if(find(hash(1, 0)) == find(hash(1, col + 1))) return k;
+            k++;
+        }
+        return cells.size();
+    }
+};
+```
