--- a/algorithm/LeetCode/[Hard] 1125. Smallest Sufficient Team.md
+++ b/algorithm/LeetCode/[Hard] 1125. Smallest Sufficient Team.md
@@ -129,3 +129,36 @@ class Solution:
         solve(0, 0, 0, 0)
         return [i for i in range(m) if self.ans & 1 << i]
 ```
+
+**Solution 4: (DP Bottom-Up, time: O(people * 2^skill), space: O(2^skill))**
+```
+Runtime: 98 ms
+Memory: 21.7 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> smallestSufficientTeam(vector<string>& req_skills, vector<vector<string>>& people) {
+        int n = req_skills.size();
+        unordered_map<int, vector<int>> dp;
+        dp.reserve(1 << n); // reserve space and avoid hash collisions
+        dp[0] = {};
+        unordered_map<string, int> skill_index;
+        for (int i = 0; i < req_skills.size(); ++i)
+            skill_index[req_skills[i]] = i;
+        for (int i = 0; i < people.size(); ++i) {
+            int cur_skill = 0;
+            for (auto& skill: people[i])
+                cur_skill |= 1 << skill_index[skill];
+            for (auto it = dp.begin(); it != dp.end(); ++it) {
+                int comb = it->first | cur_skill;
+                if (dp.find(comb) == dp.end() || dp[comb].size() > 1 + dp[it->first].size()) {
+                    dp[comb] = it->second;
+                    dp[comb].push_back(i);
+                }
+            }
+        }
+        return dp[(1 << n) - 1];
+    }
+};
+```
