--- a/algorithm/LeetCode/[Hard] 1751. Maximum Number of Events That Can Be Attended II.md
+++ b/algorithm/LeetCode/[Hard] 1751. Maximum Number of Events That Can Be Attended II.md
@@ -75,7 +75,7 @@ class Solution:
         return dp[-1][-1]
 ```
 
-**Solution 1: (DP Top-Down, Binary Search)**
+**Solution 2: (DP Top-Down, Binary Search)**
 ```
 Runtime: 988 ms
 Memory Usage: 203.7 MB
@@ -96,4 +96,30 @@ class Solution:
             return max(dp(idx+1, k), events[idx][2] + dp(bs(events[idx][1]), k-1))
     
         return dp(0,k)  
+```
+
+**Solution 3: (DP Top-Down, Binary Search)**
+```
+Runtime: 345 ms
+Memory: 75.6 MB
+```
+```c++
+class Solution {
+    vector<vector<int>> dp;
+    int dfs(vector<vector<int>>& e, int i, int k) {
+        if (k == 0 || i >= e.size())
+            return 0;
+        if (dp[i][k] != -1) 
+            return dp[i][k];
+        auto j = upper_bound(begin(e) + i, end(e), e[i][1], 
+            [](int t, const vector<int> &v) {return v[0] > t;}) - begin(e);
+        return dp[i][k] = max(e[i][2] + dfs(e, j, k - 1), dfs(e, i + 1, k));
+    }
+public:
+    int maxValue(vector<vector<int>>& events, int k) {
+        dp = vector<vector<int>>(events.size(), vector<int>(k + 1, -1));
+        sort(begin(events), end(events));
+        return dfs(events, 0, k);
+    }
+};
 ```
