update LeetCode Weekly Contest 356

--- a/algorithm/LeetCode/[Hard] 2141. Maximum Running Time of N Computers.md
+++ b/algorithm/LeetCode/[Hard] 2141. Maximum Running Time of N Computers.md
@@ -45,6 +45,40 @@ We can run the two computers simultaneously for at most 2 minutes, so we return 
 # Submissions
 ---
 **Solution 1: (Sort)**
+
+__Intuition__
+The staright idea, is to use all baterial evenly.
+So we take advantage of all the energy wihout any left.
+In this case, we can run up to sum(A) / n minutes.
+This average value is an upper bounde of the final result.
+It's great to start with this enviromental intuition.
+
+__Explanation__
+However, there may be some betteries that has too much energy.
+They are in charge all the time,
+but still can't run out all they have,
+then their energy wastes.
+
+So we can compare the average value with the most powerful battery max(A).
+If max(A) is bigger, then we can use this battery to charge a computer all the time.
+Now we reduce the problem to the left bettery and n - 1 computers.
+
+We continue doing this process,
+until the most powerful bettery max(A) can not run average time sum(A) / n.
+Then the left betteries can help each other and be use evenly until the end.
+One key point of this problem, it's to find out, why betteries can be used "evenly" in this situation.
+
+One quick "prove" is that, the max(A) is smaller than the running time,
+so the maximum battery won't get wasted,
+the other smaller betteries won't even get easted.
+
+
+__Complexity__
+Time O(sort)
+Space O(sort)
+
+The best solution can be O(A), similar to quick select algo.
+
 ```
 Runtime: 873 ms
 Memory Usage: 28.4 MB
@@ -75,6 +109,39 @@ public:
         while (batteries[na - 1 - k] > sum / (n - k))
             sum -= batteries[na - 1 - k++];
         return sum / (n - k);
+    }
+};
+```
+
+**Solution 3: (Sort, Binary Search)**
+```
+Runtime: 145 ms
+Memory: 55.8 MB
+```
+```c++
+class Solution {
+public:
+    long long maxRunTime(int n, vector<int>& batteries) {
+        sort(batteries.begin(), batteries.end());
+        long long l = 0, r = 1e18;
+        long long ans = 0;
+        while(l < r) {
+            long long mid = (l + r) / 2;
+            long long sum = 0, cnt = 0;
+            for(long long x : batteries) {
+                if(sum + x >= mid) {
+                    sum = sum + x - mid;
+                    cnt++;
+                }else sum += x;
+            }
+            if(cnt >= n) {
+                l = mid + 1;
+                ans = max(ans, mid);
+            }else {
+                r = mid;
+            }
+        }
+        return ans;
     }
 };
 ```
