update LeetCode Biweekly Contest 111

--- a/algorithm/LeetCode/[Hard] 1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree.md
+++ b/algorithm/LeetCode/[Hard] 1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree.md
@@ -146,56 +146,38 @@ To generate critical and pseudo-critical lists, we enumerate each edge:
 1. If we force adding the edge to the mst (by first adding the edge to the mst edge set and run the standard MST algorithm for the rest of the edges), and find that the mst doesn't change, then the edge goes into pseudo-critical list. (This is because if an edge can be in any mst, we can always add it to the edge set first, without changing the final mst total weight).
 
 ```
-Runtime: 144 ms
-Memory Usage: 19.6 MB
+Runtime: 120 ms
+Memory: 19.3 MB
 ```
 ```c++
 class UnionFind {
+private:
+    vector<int> par, rank;
 public:
     UnionFind(int n) {
         rank = vector<int>(n, 1);
-        f.resize(n);
-        for (int i = 0; i < n; ++i) f[i] = i;
+        par.resize(n);
+        for (int i = 0; i < n; ++i) {
+            par[i] = i;
+        }
     }
     
     int Find(int x) {
-        if (x == f[x]) return x;
-        else return f[x] = Find(f[x]);
+        if (x == par[x]) return x;
+        else return par[x] = Find(par[x]);
     }
     
     void Union(int x, int y) {
-        int fx = Find(x), fy = Find(y);
-        if (fx == fy) return;
-        if (rank[fx] > rank[fy]) swap(fx, fy);
-        f[fx] = fy;
-        if (rank[fx] == rank[fy]) rank[fy]++;
+        int xr = Find(x), yr = Find(y);
+        if (xr == yr) return;
+        if (rank[xr] > rank[yr]) swap(xr, yr);
+        par[xr] = yr;
+        if (rank[xr] == rank[yr]) rank[yr]++;
     }
-    
-private:
-    vector<int> f, rank;
 };
 
+
 class Solution {
-public:
-    vector<vector<int>> findCriticalAndPseudoCriticalEdges(int n, vector<vector<int>>& edges) {
-        for (int i = 0; i < edges.size(); ++i) {
-            edges[i].push_back(i);
-        }
-        sort(edges.begin(), edges.end(), [](const vector<int>& a, const vector<int>& b) {
-            return a[2] < b[2];
-        });
-        int origin_mst = GetMST(n, edges, -1);
-        vector<int> critical, non_critical;
-        for (int i = 0; i < edges.size(); ++i) {
-            if (origin_mst < GetMST(n, edges, i)) {
-                critical.push_back(edges[i][3]);
-            } else if (origin_mst == GetMST(n, edges, -1, i)) {
-                non_critical.push_back(edges[i][3]);
-            }
-        }
-        return {critical, non_critical};
-    }
-    
 private:
     int GetMST(const int n, const vector<vector<int>>& edges, int blockedge, int pre_edge = -1) {
         UnionFind uf(n);
@@ -216,5 +198,27 @@ private:
         }
         return weight;
     }
+
+public:
+    vector<vector<int>> findCriticalAndPseudoCriticalEdges(int n, vector<vector<int>>& edges) {
+        for (int i = 0; i < edges.size(); ++i) {
+            edges[i].push_back(i);
+        }
+        sort(edges.begin(), edges.end(), [](const vector<int>& a, const vector<int>& b) {
+            return a[2] < b[2];
+        });
+        int origin_mst = GetMST(n, edges, -1);
+        vector<int> critical, non_critical;
+        for (int i = 0; i < edges.size(); ++i) {
+            if (origin_mst < GetMST(n, edges, i)) {
+                critical.push_back(edges[i][3]);
+            } else if (origin_mst == GetMST(n, edges, -1, i)) {
+                non_critical.push_back(edges[i][3]);
+            }
+        }
+        return {critical, non_critical};
+    }
 };
+```
+```c++
 ```
