update LeetCode Biweekly Contest 112

--- a/algorithm/LeetCode/[Hard] 1326. Minimum Number of Taps to Open to Water a Garden.md
+++ b/algorithm/LeetCode/[Hard] 1326. Minimum Number of Taps to Open to Water a Garden.md
@@ -100,22 +100,25 @@ class Solution:
         return dp[n] if dp[n] < n + 2 else -1
 ```
 
-**Solution 2: (DP Top-Down, Time Limit Exceeded)**
-```python
-class Solution:
-    def minTaps(self, n: int, ranges: List[int]) -> int:
-
-        @functools.lru_cache(None)
-        def dp (pre, cur):
-            if cur >= n:
-                return 0
-            rst = float('inf')
-            for j in range(pre+1, n+1):
-                if j-ranges[j] <= cur <= j+ranges[j]:
-                    rst = min(rst, 1 + dp(j, j+ranges[j]))
-            return rst
-
-        ans = dp(-1, 0)
-
-        return -1 if ans == float('inf') else ans
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 39 ms
+Memory: 14.7 MB
+```
+```c++
+class Solution {
+public:
+    int minTaps(int n, vector<int>& ranges) {
+        vector<int> dp(n+1, n+2);
+        dp[0] = 0;
+        for (int i = 0; i <= n; i ++) {
+            if (ranges[i]) {
+                for (int j = max(0, i-ranges[i]); j <= min(n, i+ranges[i]); j ++) {
+                    dp[j] = min(dp[j], dp[max(0, i-ranges[i])] + 1);
+                }
+            }
+        }
+        return dp[n] != n+2 ? dp[n] : -1;
+    }
+};
 ```
