--- a/algorithm/LeetCode/[Hard] 1359. Count All Valid Pickup and Delivery Options.md
+++ b/algorithm/LeetCode/[Hard] 1359. Count All Valid Pickup and Delivery Options.md
@@ -255,3 +255,21 @@ class Solution:
             return 1
         return (math.factorial(2*n) // (2**n)) % (10**9 + 7)
 ```
+
+**Solution 4: (Math, DP Bottom-Up)**
+```
+Runtime: 0 ms
+Memory: 6.1 MB
+```
+```c++
+class Solution {
+public:
+    int countOrders(int n) {
+        int ans = 1;
+        for (int i = 2; i <= n; i ++) {
+            ans = ((long long int)ans * (2*i * (2*i-1) / 2))%((int)1e9 + 7);
+        }
+        return ans;
+    }
+};
+```
