update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Hard] 1463. Cherry Pickup II.md
+++ b/algorithm/LeetCode/[Hard] 1463. Cherry Pickup II.md
@@ -145,3 +145,48 @@ int cherryPickup(int** grid, int gridSize, int* gridColSize){
     return dfs(grid, gridSize, *gridColSize, 0, 0, *gridColSize - 1);
 }
 ```
+
+**Solution 4: (DP Top-Down)**
+```
+Runtime: 100 ms
+Memory: 17.2 MB
+```
+```c++
+class Solution {
+    int f(int i, int j1, int j2, int r, int c, vector<vector<int>>& grid, vector<vector<vector<int>>>& dp)
+    {
+        if (j1 < 0 || j2 < 0 || j1 >= c || j2 >= c) {
+            return -1e8;
+        }
+        if (i == r-1) {
+            if (j1 == j2) return grid[i][j1];
+            else return grid[i][j1]+grid[i][j2];
+        }
+        if (dp[i][j1][j2] != -1) {
+            return dp[i][j1][j2];
+        }
+        int rst = -1e8;
+        for (int dj1 = -1; dj1 <= 1; dj1++) {
+            for (int dj2 = -1; dj2 <= 1; dj2++) {
+                int cur;
+                if (j1 == j2) {
+                    cur = grid[i][j1];
+                } else {
+                    cur = grid[i][j1]+grid[i][j2];
+                }
+                cur += f(i+1, j1+dj1, j2+dj2, r, c, grid, dp);
+                rst = max(rst, cur);
+            }
+        }
+        dp[i][j1][j2] = rst;
+        return rst;
+    }
+public:
+    int cherryPickup(vector<vector<int>>& grid) {
+        int r = grid.size();
+        int c = grid[0].size();
+        vector<vector<vector<int>>> dp(r, vector<vector<int>>(c, vector<int>(c, -1)));
+        return f(0, 0, c-1, r, c, grid, dp);
+    }
+};
+```
