--- a/algorithm/LeetCode/[Hard] 2251. Number of Flowers in Full Bloom.md
+++ b/algorithm/LeetCode/[Hard] 2251. Number of Flowers in Full Bloom.md
@@ -72,3 +72,40 @@ public:
     }
 };
 ```
+
+**Solution 3: (Hash Table, Sort, bucket sort)**
+```
+Runtime: 253 ms
+Memory: 87.9 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> fullBloomFlowers(vector<vector<int>>& flowers, vector<int>& people) {
+        int n = people.size();
+        map<int, int> m;
+        for (int i = 0; i < flowers.size(); i ++) {
+            m[flowers[i][0]] += 1;
+            m[flowers[i][1]+1] -= 1;
+        }
+        vector<pair<int, int>> sorted_people(n);
+        for (int i = 0; i < n; i ++) {
+            sorted_people[i] = {people[i], i};
+        }
+        sort(sorted_people.begin(), sorted_people.end());
+        vector<int> ans(n);
+        int cur = 0, i = 0;
+        for (auto [k, v]: m) {
+            while (i < n && k > sorted_people[i].first) {
+                ans[sorted_people[i].second] = cur;
+                i += 1;
+            }
+            if (i >= n) {
+                break;
+            }
+            cur += v;
+        }
+        return ans;
+    }
+};
+```
