--- a/algorithm/LeetCode/]Hard] 2009. Minimum Number of Operations to Make Array Continuous.md
+++ b/algorithm/LeetCode/]Hard] 2009. Minimum Number of Operations to Make Array Continuous.md
@@ -69,20 +69,51 @@ class Solution:
 
 **Solution 2: (Sliding Window)**
 ```
-Runtime: 240 ms
-Memory Usage: 64.2 MB
+Runtime: 148 ms
+Memory: 64.5 MB
 ```
 ```c++
 class Solution {
 public:
     int minOperations(vector<int>& nums) {
-        int N = nums.size(), ans = N, j = 0;
-        sort(begin(nums), end(nums));
-        nums.erase(unique(begin(nums), end(nums)), end(nums)); // only keep unique elements
-        int M = nums.size();
-        for (int i = 0; i < M; ++i) {
-            while (j < M && nums[j] <= nums[i] + N - 1) ++j; // let `j` point to the first element that is out of range -- `> A[i] + N - 1`.
-            ans = min(ans, N - j + i); // The length of this subarray is `j - i`. We need to replace `N - j + i` elements to make it continuous.
+        int n = nums.size(), ans = n, j  = 0;
+        sort(nums.begin(), nums.end());
+        nums.erase(unique(nums.begin(), nums.end()), nums.end());
+        int m = nums.size();
+        for (int i = 0; i < m; i ++) {
+            while (j < m && nums[j] <= nums[i]+n-1) {
+                j += 1;
+            }
+            ans = min(ans, n-j+i);
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Sliding Window, Binary Search)**
+```
+Runtime: 180 ms
+Memory: 67 MB
+```
+```c++
+class Solution {
+public:
+    int minOperations(vector<int>& nums) {
+        int n = nums.size();
+        sort(nums.begin(), nums.end());
+        vector<int> uniqueNums(nums.begin(), std::unique(nums.begin(), nums.end()));
+        int ans = n;
+
+        for (int i = 0; i < uniqueNums.size(); ++i) {
+            int s = uniqueNums[i];
+            int e = s + n - 1;
+            auto it = upper_bound(uniqueNums.begin(), uniqueNums.end(), e);
+
+            // int idx = it - uniqueNums.begin();
+            int idx = distance(uniqueNums.begin(), it);
+            
+            ans = min(ans, n - (idx - i));
         }
         return ans;
     }
