update LeetCode Biweekly Contest 115

--- a/algorithm/LeetCode/[Hard] 2742. Painting the Walls.md
+++ b/algorithm/LeetCode/[Hard] 2742. Painting the Walls.md
@@ -57,3 +57,76 @@ public:
     }
 };
 ```
+
+**Solution 2: (DP Top-Down)**
+```
+Runtime: 156 ms
+Memory: 116.1 MB
+```
+```c++
+class Solution {
+    long fun( int i , vector<int> &cost ,int paint,  vector<int>& time, vector<vector<int>> & dp)
+    {
+        //  we just painted entire wall, so cost to paint such wall will be 0;
+        if( paint <= 0) return 0;
+
+        // we reached end of index but couldn't paint the wall, so its undesired state.
+        if( i >= cost.size()) return 1e9;
+
+        // if we have already encountered the current state
+        if( dp[i][paint] != -1) return dp[i][paint];
+
+        // typical knapsack take and not_take functioinal calls
+        // we didn't considered curent index so that we can have choose any other optimal solution in future if such solution exists.
+        long  not_take= fun( i+1, cost, paint,time, dp);
+
+        long  take = 0;
+        // check if current index provides us the desired optimal answer
+        take = fun( i+1, cost, paint - time[i] -1, time, dp) + cost[i];
+        
+        //return most optimal choice
+        return  dp[i][paint] = min( take , not_take);
+    }
+
+public:
+public:
+    int paintWalls(vector<int>& cost, vector<int>& time) {
+        int n = cost.size();
+        vector<vector<int>> dp( n+1, vector<int>( n+1, -1));
+        return fun(0 , cost, n, time, dp );
+    }
+};
+```
+
+**Solution 3: (DP Bottom-Up)**
+```
+Runtime: 134 ms
+Memory: 115.3 MB
+```
+```c++
+class Solution {
+public:
+public:
+    int paintWalls(vector<int>& cost, vector<int>& time) {
+        int n = cost.size();
+        vector<int> dp(n+1, 1e9);
+
+        // base case if zero walls are remaining cost occured will be zero 
+        dp[0] = 0;
+
+        for (int i = n-1; i >= 0; i--) {
+            vector<int> cur(n+1, 1e9);
+            cur[0] = 0;
+            for (int j = n; j >= 0 ; j--) {
+                cur[j] = dp[j];
+                if (j - time[i] -1 >= 0)
+                    dp[j]  = min(dp[j - time[i] -1] + cost[i], dp[j]);
+                else if (time[i] + 1 > j) {
+                    dp[j] = min(cost[i] , dp[j]);
+                }
+            }
+        }
+        return dp[n];
+    }
+};
+```
