--- a/algorithm/LeetCode/[Hard] 1269. Number of Ways to Stay in the Same Place After Some Steps.md
+++ b/algorithm/LeetCode/[Hard] 1269. Number of Ways to Stay in the Same Place After Some Steps.md
@@ -41,7 +41,7 @@ Output: 8
 
 # Submissions
 ---
-**Solution 1:**
+**Solution 1: (DP Top-Down)**
 ```
 Runtime: 268 ms
 Memory Usage: 55.5 MB
@@ -61,4 +61,34 @@ class Solution:
             return (dp(pos+1, step) + dp(pos-1, step) + dp(pos, step)) % MOD
         
         return dp(0, steps)
+```
+
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 26 ms
+Memory: 10.6 MB
+```
+```c++
+class Solution {
+public:
+    int numWays(int steps, int arrLen) {
+        int n = min(steps / 2 + 1, arrLen);
+        vector<vector<int>> dp(steps + 1, vector<int>(n, 0));
+        dp[0][0] = 1;
+        int mod = 1e9 + 7; 
+        for (int i = 1; i <= steps; i++) {
+            for (int j = 0; j < n; j++) {
+                dp[i][j] = dp[i - 1][j];
+                if (j > 0) {
+                    dp[i][j] = (dp[i][j] + dp[i - 1][j - 1]) % mod;
+                }
+                if (j < n - 1) {
+                    dp[i][j] = (dp[i][j] + dp[i - 1][j + 1]) % mod;
+                }
+            }
+        }
+        
+        return dp[steps][0];
+    }
+};
 ```
