--- a/algorithm/LeetCode/[Hard] 1425. Constrained Subset Sum.md
+++ b/algorithm/LeetCode/[Hard] 1425. Constrained Subset Sum.md
@@ -141,3 +141,58 @@ class Solution:
 
         return ret
 ```
+
+**Solution 4: (Heap)**
+```
+Runtime: 267 ms
+Memory: 139.7 MB
+```
+```c++
+class Solution {
+public:
+    int constrainedSubsetSum(vector<int>& nums, int k) {
+        priority_queue<pair<int,int>> pq;
+        int ans = INT_MIN;
+        for (int i = 0; i < nums.size(); i++)
+        {
+            while (!pq.empty() && pq.top().second < i-k)
+                pq.pop();
+            if (!pq.empty())
+                nums[i] = max(nums[i], nums[i]+pq.top().first);
+            ans = max(ans, nums[i]);
+            pq.push({nums[i] , i});
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 5: (Greedy, mono queue maintain target requirement)**
+```
+Runtime: 200 ms
+Memory: 117.3 MB
+```
+```c++
+class Solution {
+public:
+    int constrainedSubsetSum(vector<int>& nums, int k) {
+        deque<int> q;
+        int ans = INT_MIN;
+        for (int i = 0; i < nums.size(); i ++) {
+            nums[i] += q.size() ? q.front() : 0;
+            ans = max(ans, nums[i]);
+            while (q.size() && nums[i] > q.back()) {
+                q.pop_back();
+            }
+            if (nums[i] > 0) {
+                q.push_back(nums[i]);
+            }
+            if (i >= k && q.size() && q.front() == nums[i-k]) {
+                q.pop_front();
+            }
+        }
+        return ans;
+    }
+};
+```
+
