--- a/algorithm/LeetCode/[Hard] 2050. Parallel Courses III.md
+++ b/algorithm/LeetCode/[Hard] 2050. Parallel Courses III.md
@@ -91,34 +91,42 @@ Runtime: 352 ms
 Memory Usage: 131.4 MB
 ```
 ```c++
+Runtime: 320 ms
+Memory: 132.1 MB
+```
+```c++
 class Solution {
 public:
     int minimumTime(int n, vector<vector<int>>& relations, vector<int>& time) {
-        vector<int> inDegree(n);
-        vector<vector<int>> graph(n, vector<int>());
-        for (auto& edge : relations) {
-            int prev = edge[0] - 1, next = edge[1] - 1;
-            graph[prev].push_back(next);
-            inDegree[next]++;
+        vector<vector<int>> g(n);
+        vector<int> indeg(n);
+        for (auto &vec: relations) {
+            g[vec[0]-1].push_back(vec[1]-1);
+            indeg[vec[1]-1] += 1;
         }
-        
-        vector<int> dist(n);
         queue<int> q;
-        for (int u = 0; u < n; ++u) {
-            if (inDegree[u] == 0) {
-                q.push(u);
-                dist[u] = time[u];
+        vector<int> dist(n);        
+        int ans = 0;
+        for (int i = 0; i < n; i ++) {
+            if (indeg[i] == 0) {
+                q.push(i);
+                dist[i] = time[i];
+                ans = max(ans, dist[i]);
             }
         }
         while (!q.empty()) {
-            int u = q.front(); q.pop();
-            for (int v : graph[u]) {
-                dist[v] = max(dist[v], dist[u] + time[v]); // Update `dist[v]` using the maximum dist of the predecessor nodes
-                if (--inDegree[v] == 0) 
-                    q.push(v);
+            auto v = q.front();
+            q.pop();
+            for (auto nv: g[v]) {
+                indeg[nv] -= 1;
+                dist[nv] = max(dist[nv], dist[v] + time[nv]);
+                if (indeg[nv] == 0) {
+                    q.push(nv);
+                    ans = max(ans, dist[nv]);
+                }
             }
         }
-        return *max_element(dist.begin(), dist.end());
+        return ans;
     }
 };
 ```
